扫一扫 导航栏

--- a/WYIOSProject/Info.plist
+++ b/WYIOSProject/Info.plist
@@ -41,5 +41,7 @@
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>&quot;使用相机&quot;</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
